--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//application/common.php=UTF-8
 encoding//application/index/controller/Head.php=UTF-8
+encoding//application/index/model/Mtanc.php=UTF-8
