第七次 提交

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//application/common.php=UTF-8
+encoding//application/config.php=UTF-8
+encoding//application/database.php=UTF-8
 encoding//application/index/controller/Head.php=UTF-8
 encoding//application/index/model/Mtanc.php=UTF-8
