--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,4 +9,6 @@ encoding//application/common.php=UTF-8
 encoding//application/config.php=UTF-8
 encoding//application/database.php=UTF-8
 encoding//application/index/controller/Head.php=UTF-8
-encoding//application/index/model/Mtanc.php=UTF-8
+encoding//application/index/controller/Index.php=UTF-8
+encoding//application/index/model/Dengmodel.php=UTF-8
+encoding//public/static/css/login.css=UTF-8
