--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,4 +11,6 @@ encoding//application/database.php=UTF-8
 encoding//application/index/controller/Head.php=UTF-8
 encoding//application/index/controller/Index.php=UTF-8
 encoding//application/index/model/Dengmodel.php=UTF-8
+encoding//application/index/model/Notemodel.php=UTF-8
 encoding//public/static/css/login.css=UTF-8
+encoding//public/static/css/style.css=UTF-8
