--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,7 +10,9 @@ encoding//application/config.php=UTF-8
 encoding//application/database.php=UTF-8
 encoding//application/index/controller/Head.php=UTF-8
 encoding//application/index/controller/Index.php=UTF-8
+encoding//application/index/controller/Ornet.php=UTF-8
 encoding//application/index/model/Dengmodel.php=UTF-8
 encoding//application/index/model/Notemodel.php=UTF-8
+encoding//application/index/view/order/sureorder.html=UTF-8
 encoding//public/static/css/login.css=UTF-8
 encoding//public/static/css/style.css=UTF-8
